# Otus_print_ip

./: .gitignore  CMakeLists.txt  Doxyfile
.cache/clangd/index/: Print_ip.h.6E0755F6AF08D3F4.idx  main.cpp.C987F15ACCB1A964.idx  traits.h.D691906D40D8176D.idx
.github/workflows/: print_ip.yml
html/: dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  globals.html  globals_func.html  index.html  ip__print_8h.html  ip__print_8h_source.html  main_8cpp.html
html/search/: all_2.js  files_0.js  searchdata.js
include/: Print_ip.h  ip_print.h
src/: main.cpp
