cmake_minimum_required(VERSION 3.26)

set(MAIN_APP_NAME "print_ip")
set(PROJECT_NAME "SFINAE")

set(PATCH_VERSION "1" CACHE INTERNAL "Patch version")
set(PROJECT_VESRION 0.0.${PATCH_VERSION})

project(PROJECT_NAME VERSION ${PROJECT_VESRION})

include_directories(include)
add_executable(${MAIN_APP_NAME} src/main.cpp)
set_property(TARGET ${MAIN_APP_NAME} PROPERTY CXX_STANDARD 17)

set(CPACK_GENERATOR DEB)
set(CPACK_PACKAGE_VERSION_MAJOR "${PROJECT_VERSION_MAJOR}")
set(CPACK_PACKAGE_VERSION_MINOR "${PROJECT_VERSION_MINOR}")
set(CPACK_PACKAGE_VERSION_PATCH "${PROJECT_VERSION_PATCH}")
set(CPACK_PACKAGE_CONTACT example@example.com)
include(CPack)